crates/solidity-v2/testing/snapshots/binder_output/scoping/redeclared_members/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Identifier already declared.
   ╭─[input.sol:2:15]
   │
 2 │ bool constant k = true;
   │               ┬  
   │               ╰── Error occurred here.
───╯
Error: Identifier already declared.
   ╭─[input.sol:6:10]
   │
 6 │     bool x;
   │          ┬  
   │          ╰── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (6):
- Def: #1 ["k" @ input.sol:1:15] (constant, type: uint256)
- Def: #2 ["k" @ input.sol:2:15] (constant, type: bool)
- Def: #3 ["Test" @ input.sol:4:10] (contract)
- Def: #4 ["x" @ input.sol:5:10] (state var, type: uint256)
- Def: #5 ["x" @ input.sol:6:10] (state var, type: bool)
- Def: #6 ["test" @ input.sol:8:14] (function, type: function () returns uint256)

------------------------------------------------------------------------

References (2):
- Ref: ["k" @ input.sol:9:9] -> #1
- Ref: ["x" @ input.sol:10:9] -> #4

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ uint constant k = 1;
    │               ┬  
    │               ╰── name: 1
  2 │ bool constant k = true;
    │               ┬  
    │               ╰── name: 2
    │ 
  4 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 3
  5 │     uint x;
    │          ┬  
    │          ╰── name: 4
  6 │     bool x;
    │          ┬  
    │          ╰── name: 5
    │ 
  8 │     function test() public view returns (uint) {
    │              ──┬─  
    │                ╰─── name: 6
  9 │         k;
    │         ┬  
    │         ╰── ref: 1
 10 │         x;
    │         ┬  
    │         ╰── ref: 4
────╯
